--- a/config/i3/config
+++ b/config/i3/config
@@ -29,7 +29,8 @@ bindsym $mod+b border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font xft:JetBrains Mono 8
+font xft:Monaspace Neon 8
+# font pango:Monaco 10
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
