--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -9,10 +9,10 @@
 # NOTE: no need for patched fonts .. kitty pickes up the symbols automatically
 # see: https://github.com/kovidgoyal/kitty/issues/2022#issuecomment-583249783
 # font_family      Fira Code Nerd Font Regular
-# font_family      Fira Code
-# bold_font        Fira Code Bold
-# italic_font      Fira Code Italic
-# bold_italic_font Fira Code Bold Italic
+font_family      Fira Code
+bold_font        Fira Code Bold
+italic_font      Fira Code Italic
+bold_italic_font Fira Code Bold Italic
 
 # font_family      Victor Mono
 # bold_font        Victor Mono Bold
@@ -24,10 +24,10 @@
 # italic_font      JetBrains Mono Italic
 # bold_italic_font JetBrains Mono Bold Italic
 
-font_family      JetBrainsMono Nerd Font
-bold_font        JetBrainsMono Nerd Font Bold
-italic_font      JetBrainsMono Nerd Font Italic
-bold_italic_font JetBrainsMono Nerd Font Bold Italic
+# font_family      JetBrainsMono Nerd Font
+# bold_font        JetBrainsMono Nerd Font Bold
+# italic_font      JetBrainsMono Nerd Font Italic
+# bold_italic_font JetBrainsMono Nerd Font Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
