--- a/config/polybar/config
+++ b/config/polybar/config
@@ -123,7 +123,8 @@ module-margin-left = 1
 module-margin-right = 1
 
 ;https://github.com/jaagr/polybar/wiki/Fonts
-font-0 = "JetBrains Mono:size=8.6;2"
+font-0 = "Monaspace Neon:size=8.6;2"
+; font-0 = "JetBrains Mono:size=8.6;2"
 font-1 = "FiraCode Nerd Font Mono:size=14;3"
 ; font-2 = "FiraCode Nerd Font Mono:style=Regular:pixelsize=8;1"
 ; font-3 = "FiraCode Nerd Font Mono:style=Solid:pixelsize=8;1"
@@ -422,7 +423,7 @@ fuzzy-match = false
 
 ws-icon-0 = 1; 
 ws-icon-1 = 2; 
-ws-icon-2 = 3; 
+ws-icon-2 = 3; 
 ws-icon-3 = 4; 
 ws-icon-4 = 5; 
 ws-icon-5 = 6;  
